<?xml version="1.0"?>
<package>
  <name>structure_core</name>
  <version>0.0.0</version>
  <description>The structure_core package</description>

  <maintainer email="noone@noone.com">Not Maintained</maintainer>

  <license>Apache 2.0</license>

  <!-- <url type="website">http://wiki.ros.org/structure_core</url> -->

  <author email="chad@chaddev.com">Chad Rockey</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>eigen</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>eigen</run_depend>

  <export>
  </export>
</package>
